<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:background="@mipmap/road_background"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/text_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Tawselah"
            android:textSize="24dp"/>


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/signup"
        android:textColor="@color/colorWhite"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain" />

    <LinearLayout
        android:id="@+id/vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.322">


        <EditText
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/shapetransparent"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:hint="@string/user_name"
            android:importantForAutofill="yes"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/shapetransparent"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/e_mail"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapetransparent"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/password"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
        <EditText
            android:id="@+id/rePasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapetransparent"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/confirm_password"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />


        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/shapetransparent"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="left"
            android:hint="Phone number"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_gravity="center"
                android:text="@string/gemder"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:paddingVertical="10dp"
                    android:text="@string/female"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:gravity="left"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/dateOfBirthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="YYYY/MM/DD"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="18dp"/>


        </LinearLayout>

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/shapewhite"
            android:shadowColor="@android:color/transparent"
            android:text="@string/regisration"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progress_bar_circular"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:theme="@style/AppTheme.WhiteAccent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>