<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragments.MainFragment.MainFragment"
    >

    <!-- TODO: Update blank fragment layout -->


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorDarkGray"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_home_black_24dp" />

        <TextView
            android:id="@+id/text_Edit"
            android:layout_width="wrap_content"
            android:fontFamily="@font/airstrike"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textColor="@color/colorYellow"
            android:text="@string/Tawselah"
            android:textSize="35dp" />


        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:textColor="@color/colorWhite"
            android:text="@string/user"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signOutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/signOut"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigation"
        android:layout_below="@+id/toolbarMain"
        android:layout_marginTop="0dp">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_navigation_bottom" />


</RelativeLayout>