<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Login"
    android:id="@+id/constraintLayout">

    <LinearLayout
        android:id="@+id/linearlogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.95"
        android:background="@mipmap/road_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/image_login"
            android:layout_width="283dp"
            android:layout_height="159dp"
            app:srcCompat="@mipmap/road_main" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Tawselah"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/userLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapetransparent"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:hint="@string/user_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/passwordLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapetransparent"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <LinearLayout
            android:id="@+id/linearlayout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:background="@drawable/shapewhite"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:background="@drawable/shapesignup"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/signup"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_bar_circular"
            android:layout_marginTop="30dp"
            android:theme="@style/AppTheme.WhiteAccent"
            android:layout_width="match_parent"
            android:layout_height="100dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>